# xks

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  XKS.sln  docker_release.sh  pom.xml  setup_env.sh
.run/: server for backend (+frontend) development.run.xml  server for frontend development.run.xml  xks backend.run.xml  xks frontend debug.run.xml  xks frontend.run.xml
XKS/: App.xaml  App.xaml.cs  Program.cs  ViewLocator.cs
XKS.App/: .gitignore  App.xaml  App.xaml.cs  DeckListController.cs  IExampleService.cs  MainWindowController.cs  Program.cs  ViewLocator.cs  XKS.App.csproj
XKS.App.Tests/: SampleTests.cs  XKS.App.Tests.csproj
XKS.App/Configuration/: AppModule.cs
XKS.App/Resource/: DeckList.glade  MainWindow.glade  ResourceConfiguration.cs
XKS.App/ViewModels/: MainWindowViewModel.cs  ViewModelBase.cs
XKS.App/Views/: DeckListView.cs  MainView.cs  MainWindow.xaml  MainWindow.xaml.cs
XKS.CLI/: Program.cs  XKS.CLI.csproj
XKS.CLI/Configuration/: Module.cs
XKS.Common/: XKS.Common.csproj
XKS.Common/Configuration/: IApplicationModule.cs  RegisteredModule.cs
XKS.Common/Entities/: Card.cs  Deck.cs  Entity.cs  LoggedAnswer.cs  QuestionAnswerPair.cs  Tag.cs
XKS.Common/Infrastructure/: AssemblyUtilities.cs  AutomapperHelper.cs  DefaultAutoMapperProfile.cs  ValueObject.cs
XKS.Core/: XKS.Core.csproj
XKS.Core.Tests/: SampleTests.cs  XKS.Core.Tests.csproj
XKS.Core/Configuration/: IApplicationModule.cs  Module.cs  RegisteredModule.cs
XKS.Core/Entities/: Card.cs  Deck.cs  Entity.cs  LoggedAnswer.cs  QuestionAnswerPair.cs  Tag.cs
XKS.Core/Infrastructure/: AssemblyUtilities.cs  AutomapperHelper.cs  DefaultAutoMapperProfile.cs  ValueObject.cs
XKS.Core/Repository/: IEntityRepository.cs
XKS.Core/Service/: IDeckService.cs
XKS.Core/View/: CardCheckerResponse.cs  CardView.cs  FinalCardAnswer.cs  SuppliedAnswer.cs
XKS.Data/: ConnectionConfiguration.cs  DataAutoMapperProfile.cs  Module.cs  StandardDbContext.cs  XKS.Data.csproj  XksLocalDbContext.cs
XKS.Data.Tests/: SampleTests.cs  XKS.Data.Tests.csproj
XKS.Desktop/: DeckListController.cs  LearnViewController.cs  MainApplication.cs  MainWindow.cs  MainWindowController.cs  Program.cs  XKS.Desktop.csproj
XKS.Domain/: Module.cs  XKS.Domain.csproj
XKS.Domain.Tests/: SampleTests.cs  XKS.Domain.Tests.csproj
XKS.Launcher/: AssemblyUtilities.cs  ModuleConfiguration.cs  Program.cs  XKS.Launcher.csproj
XKS.Tests/: XKS.Tests.csproj
XKS.Web/: .gitignore  Program.cs  Startup.cs  WeatherForecast.cs  XKS.Web.csproj  appsettings.json
app/: README.md  angular.json  karma.conf.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.base.json  tsconfig.json  tsconfig.spec.json  tslint.json
cpp/: .gitignore
cpp/xks/: CMakeLists.txt  MainApplication.cpp  MainApplication.h  MainOrchestrator.cpp  MainOrchestrator.h  MainWindow.cpp  MainWindow.h  README.md  cppcheck.sh  main.cpp  main.glade  types.h
cpp/xks/controller/: DeckListController.cpp  DeckListController.h  EditorController.cpp  EditorController.h  MainController.cpp  MainController.h  NewItemDialogController.cpp  NewItemDialogController.h  SessionController.cpp  SessionController.h
cpp/xks/view/: DeckListView.cpp  DeckListView.h  EditView.cpp  EditView.h  GraphEditorView.cpp  GraphEditorView.h  MainView.cpp  MainView.h  NewItemDialogView.cpp  NewItemDialogView.h  SessionView.cpp  SessionView.h  TableEditorView.cpp  TableEditorView.h
cs/: .gitlab-ci.yml
deployment/: README.md  backend-dev.sh  compose-base.yaml  compose-local.yaml  compose-production.yaml  frontend-dev.sh  production.sh
(+531 files in other folders)
